fix a bug that could make word wrapping in some devices

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -164,7 +164,6 @@
     position: relative;
     cursor: pointer;
     padding: 0.2rem;
-    width: 50%;
     height: calc(10vh);
     margin: 0 auto;
     text-align: center;
